# Games

./: README.md
Conways_Game_of_Life/: README.md  pyproject.toml
Conways_Game_of_Life/game_of_life/: __main__.py  cli.py  grid.py  patterns.py  views.py
Conways_Game_of_Life/game_of_life.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
