[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "game_of_life"
dynamic = ["version"]
description = "Conways Game of Life in your terminal."
readme = "README.md"
authors = [{name = "Dr. Leonard Pleschberger", email = "leonard.pleschberger@gmail.com"}]
dependencies = [
    "tomli; python_version < '3.11'"
]

[project.scripts]
game_of_life = "game_of_life.__main__:main"

[tool.setuptools.dynamic]
version = {attr = "game_of_life.__version__"}